--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -115,6 +115,7 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -124,4 +125,8 @@
 * {
   font-family: "Poppins", sans-serif;
   font-style: normal;
+}
+
+button {
+  cursor: pointer;
 }
